arcs/template/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <arc>-api
  namespace: <ns>
spec:
  selector: { app: <arc>-api }
  ports:
    - name: http
      port: 8000
      targetPort: http
